# llm_cli

./: .env.example  .gitignore  Cargo.toml  config.toml
src/: main.rs
src/api/: client.rs  mod.rs  models.rs  providers.rs
src/cli/: mod.rs
src/commands/: ask.rs  chat.rs  compare.rs  config.rs  mod.rs  session.rs  template.rs
src/config/: manager.rs  mod.rs
src/output/: formatter.rs  mod.rs
src/session/: mod.rs  store.rs
src/template/: engine.rs
src/utils/: error.rs
tests/: integration.rs
