[package]
name = "llm-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal output
colored = "2.1"
indicatif = "0.17"

# Configuration
config = "0.14"
directories = "5.0"
toml = "0.8"

# Session storage
sled = "0.34"

# Async streams
futures = "0.3"
tokio-stream = "0.1"

# Environment variables
dotenv = "0.15"

# Date/time
chrono = "0.4"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"

env_logger = "0.11"
log = "0.4"

[[bin]]
name = "llm-cli"
path = "src/main.rs"
